--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -2,3 +2,12 @@
     width: 176px;
     height: 50px;
 }
+
+.banner{
+    height: 352px;
+}
+
+.banner__container-div{
+    padding-top: 100px;
+    padding-left: 70px;
+}
