--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -3,6 +3,10 @@
     height: 50px;
 }
 
+.container__login-desktop input{
+    width: 393px;
+}
+
 .banner{
     height: 352px;
 }
@@ -10,4 +14,31 @@
 .banner__container-div{
     padding-top: 100px;
     padding-left: 70px;
+}
+
+.seccion__products .title__products{
+    width: 90%;
+}
+
+.title__products h1{
+    font-size: 3.2rem;
+    margin-bottom: 10px;
+}
+
+.quienesSomos{
+    width: 50%;
+    flex-direction: row;
+    align-items: flex-start;
+}
+
+.quienesSomos div{
+    margin-left: 50px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+.formulario{
+    margin-left: 25px;
 }
