--- a/styles/logIn-mobile.css
+++ b/styles/logIn-mobile.css
@@ -16,6 +16,10 @@ header{
     justify-content: space-between;
 }
 
+.container__login-tablet{
+    display: none;
+}
+
 /*ESTILOS DEL MAIN*/
 main{
     background-color: #F5F5F5;
