--- a/styles/logIn-tablet.css
+++ b/styles/logIn-tablet.css
@@ -1,3 +1,4 @@
+/*ESTILOS DEL HEADER*/
 header{
     justify-content: flex-start;
 }
@@ -35,4 +36,32 @@ header{
     background-repeat: no-repeat;
     background-position: center;
     background-color: #F5F5F5;
+}
+
+/*ESTILOS DEL FOOTER*/
+footer{
+    height: 326px;
+    display: flex;
+    align-items: center;
+}
+
+.quienesSomos{
+    width: 30%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.formulario{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 70%;
+    height: 100%;
+}
+
+.formulario input, textarea{
+    width: 90%;
 }
