--- a/styles/logIn-mobile.css
+++ b/styles/logIn-mobile.css
@@ -6,7 +6,7 @@
 
 html{
     font-size: 62.5%;
-    font-family: 'Raleway', sans-serif;;
+    font-family: 'Raleway', sans-serif;
 }
 
 /*ESTILOS DEL HEADER*/
