--- a/styles/nuevo-prod-mobile.css
+++ b/styles/nuevo-prod-mobile.css
@@ -55,6 +55,7 @@ main h1{
 
 main form{
     height: 50vh;
+    padding: 20px 20px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -62,7 +63,7 @@ main form{
 }
 
 main form input{
-    width: 275px;
+    width: 100%;
     height: 56px;
     padding: 5px 5px;
     margin-bottom: 15px;
