--- a/styles/productos-mobile.css
+++ b/styles/productos-mobile.css
@@ -33,11 +33,14 @@ header{
     margin-bottom: 10px;
 }
 
-.todosLosProductos button{
+.todosLosProductos a{
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 150px;
     height: 40px;
     background-color: #2A7AE4;
-    border: none;
     font-weight: 600;
     font-size: 1.4rem;
     line-height: 1.6rem;
