--- a/styles/tablet.css
+++ b/styles/tablet.css
@@ -27,7 +27,7 @@
     height: 40px;
     border: none;
     border-radius: 0 20px 20px 0;
-    background-image: url(/logos/icone-buscador-tablet.svg);
+    background-image: url(../logos/icone-buscador-tablet.svg);
     background-repeat: no-repeat;
     background-position: center;
     background-color: #F5F5F5;
