--- a/styles/nuevo-prod-mobile.css
+++ b/styles/nuevo-prod-mobile.css
@@ -61,14 +61,14 @@ main .container__inputs{
     align-items: center;
 }
 
-main form .inputsP{
+main .container__inputs .inputsP{
     width: 100%;
     height: 56px;
     padding: 5px 5px;
     margin-bottom: 15px;
 }
 
-main form .Agregar-prodducto{
+main .container__inputs .Agregar-prodducto{
     width: 100%;
     height: 51px;
     border: none;
@@ -77,6 +77,7 @@ main form .Agregar-prodducto{
     font-weight: 600;
     font-size: 1.4rem;
     line-height: 1.6rem;
+    cursor: pointer;
 }
 
 /*ESTILOS DEL FOOTER*/
