agregue el archivo html al action del form del archivo de logIn

--- a/styles/logIn-mobile.css
+++ b/styles/logIn-mobile.css
@@ -58,6 +58,7 @@ main form .entrar{
     font-weight: 600;
     font-size: 1.4rem;
     line-height: 1.6rem;
+    cursor: pointer;
 }
 
 /*ESTILOS DEL FOOTER*/
