--- a/styles/logIn-mobile.css
+++ b/styles/logIn-mobile.css
@@ -26,8 +26,9 @@ main{
 }
 
 main h1{
+    margin-bottom: 25px;
     text-align: center;
-    padding-top: 10px;
+    padding-top: 25px;
     font-weight: 700;
     font-size: 1.6rem;
     line-height: 1.8rem;
@@ -35,19 +36,75 @@ main h1{
 }
 
 main form{
-    height: 50vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
+.input-container{
+    position: relative;
+    margin-bottom: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    box-sizing: border-box;
+}
+
 main form .input-logIn{
+    box-sizing: border-box;
     width: 275px;
     height: 40px;
     padding: 5px 5px;
     margin-bottom: 15px;
 }
+
+.input-logIn::placeholder{
+    visibility: hidden;
+    color: #464646;
+}
+
+.input-logIn:focus{
+    outline: none;
+}
+
+.input-label{
+    position: absolute;
+    top: 1.375rem;
+    left: 0.5rem;
+    transition:  all 0.25s;
+    font-size: 1.6rem;
+}
+
+.input-logIn:not(:placeholder-shown) + .input-label, .input-logIn:focus + .input-label{
+    font-size: 0.875rem;
+    top: 0.25rem;
+    transition: all 0.25s;
+}
+
+.input-container--invalid{
+    margin-bottom: 0.5rem;
+}
+
+.input-container--invalid .input-logIn{
+    border: 1px solid red;
+    border-radius: 8px;
+}
+
+.input-container--invalid .input-label{
+    color: red;
+}
+
+.input-message-error {
+    display: none;
+}
+
+.input-container--invalid .input-message-error {
+    color: red;
+    display: block;
+    margin-top: 0.5rem;
+    padding-left: 0.5rem;
+  }
 
 main form .entrar{
     width: 109px;
