--- a/styles/logIn-mobile.css
+++ b/styles/logIn-mobile.css
@@ -48,6 +48,7 @@ main form{
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
+    align-items: center;
     box-sizing: border-box;
 }
 
@@ -71,7 +72,6 @@ main form .input-logIn{
 .input-label{
     position: absolute;
     top: 1.375rem;
-    left: 0.5rem;
     transition:  all 0.25s;
     font-size: 1.6rem;
 }
