--- a/styles/nuevo-prod-tablet.css
+++ b/styles/nuevo-prod-tablet.css
@@ -33,6 +33,11 @@
     background-color: #F5F5F5;
 }
 
+.container__carrito{
+    width: 420px;
+    left: calc(50% - 50px);
+}
+
 /*ESTILOS DEL MAIN*/
 main .container__inputs .inputsP{
     width: 90%;
